--- a/sample_config.env
+++ b/sample_config.env
@@ -5,8 +5,8 @@ AUTH_CHANNEL = ""
 SESSION_STRING = ""
 BASE_URL = ""
 PORT = "8080"
-USERNAME = "admin" 
-PASSWORD = "admin" 
+USERNAME = "Riyuman" 
+PASSWORD = "Riyuman" 
 SLEEP_THRESHOLD = "60"
 WORKERS = "10"
 MULTI_CLIENT = "False"
